# altair-saver-playwright

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/altair_saver_playwright/: __init__.py  core.py
tests/: test_core.py
