[tool.poetry]
name = "altair-saver-playwright"
version = "0.1.0"
description = ""
authors = ["Peter Baumgartner <5107405+pmbaumgartner@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "altair_saver_playwright", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.27.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
altair = "^4.2.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
